--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
       <img src="./fotoproduto/produto1.jpg" alt="Carro 1">
       <h2>Frigobar 80 Litros 12/24v</h2>
       <p>Preço:R$3.448,50</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+      <a href="detalhes1.html" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
     <article class="art-home">
       <img src="./fotoproduto/produto2.jpg" alt="Carro 2">
       <h2>Frigobar 120 Litros 12/24v</h2>
-      <p>Preço:R$ 1,584.99</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+      <p>Preço:R$ 3.505,50</p>
+      <a href="detalhes2.html" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
     <article class="art-home">
       <img src="./fotoproduto/produto3.jpg" alt="Carro 3">
       <h2>Frigobar Duplex 88 Litros 12/24v</h2>
       <p>Preço: R$3.790,50</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+      <a href="detalhes3.html" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
   </section>
   <br>
@@ -97,20 +97,20 @@
       <img src="./fotoproduto/produto4.jpg" alt="peça 1" style="width: 100%;">
       <h2>Refrigerador Duplex 260 Litros 12/24</h2>
       <p>Preço: R$5.035,00</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+      <a href="detalhes4.html" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
     <article class="art-home">
       <img src="./fotoproduto/produto5.jpg" alt="Peça 2">
-      <h2>Freezer 150 Litros Tampa Ilha</h2>
-      <p>Preço:R$3.059,00</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+      <h2>Caixa Térmica 90 Litros</h2>
+      <p>Preço:R$585,00</p>
+      <a href="detalhes5.html" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
 
     <article class="art-home">
       <img src="./fotoproduto/produto6.jpg" alt="Peça 3">
       <h2>Freezer 300 Litros Tampa Cega 12/24v</h2>
-      <p>Preço: R$5.510,00</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+      <p>Preço: R$3.505,50</p>
+      <a href="detalhes6.html" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
   </section>
   <br>
