--- a/catalogo.html
+++ b/catalogo.html
@@ -81,8 +81,7 @@
         <!-- Valor -->
         <p><b>R$ 3.505,50</b> no PIX</p>
         <!-- Quantidade no Cartão-->
-        <p>6x de R$ 615,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="Detalhes1.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -92,8 +91,7 @@
         <!-- Valor -->
         <p><b>R$ 3.448,50</b> no PIX</p>
         <!-- Quantidade no Cartão-->
-        <p>6x de R$ 605,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="Detalhes2.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -103,8 +101,7 @@
         <!-- Valor -->
         <p><b>R$ 3.790,50</b> no PIX</p>
         <!-- Quantidade no Cartão-->
-        <p>6x de R$ 665,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="Detalhes3.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -113,9 +110,7 @@
         <h2>Refrigerador Duplex 260L 12/24v</h2>
         <!-- Valor -->
         <p><b>R$ 5.035,50</b> no PIX</p>
-        <!-- Quantidade no Cartão-->
-        <p>6x de R$ 883,33 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="Detalhes4.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -123,9 +118,7 @@
         <!-- Titulo -->
         <h2>Caixa Térmica 90L</h2>
         <!-- Valor -->
-        <p><b>R$ 893,00</b> no PIX</p>
-        <!-- Quantidade no Cartão-->
-        <p>6x de R$ 235,00 no cartão s/ juros</p><br>
+        <p><b>R$ 585,00</b> no PIX</p>
         <a href="Detalhes.html" class="botao">Mais Informações</a>
       </article>
 
@@ -135,8 +128,6 @@
         <h2>Freezer 300 Litros com Tampa 12/2</h2>
         <!-- Valor -->
         <p><b>R$ 3.505,50</b> no PIX</p>
-        <!-- Quantidade no Cartão-->
-        <p>6x de R$ 615,00 no cartão s/ juros</p><br>
         <a href="Detalhes.html" class="botao">Mais Informações</a>
       </article>
 
