--- a/catalogo.html
+++ b/catalogo.html
@@ -91,7 +91,7 @@
         <!-- Valor -->
         <p><b>R$ 3.448,50</b> no PIX</p>
         <!-- Quantidade no Cartão-->
-        <a href="Detalhes2.html" class="botao">Mais Informações</a>
+        <a href="detalhes2.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -101,7 +101,7 @@
         <!-- Valor -->
         <p><b>R$ 3.790,50</b> no PIX</p>
         <!-- Quantidade no Cartão-->
-        <a href="Detalhes3.html" class="botao">Mais Informações</a>
+        <a href="detalhes3.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -110,7 +110,7 @@
         <h2>Refrigerador Duplex 260L 12/24v</h2>
         <!-- Valor -->
         <p><b>R$ 5.035,50</b> no PIX</p>
-        <a href="Detalhes4.html" class="botao">Mais Informações</a>
+        <a href="detalhes4.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -119,7 +119,7 @@
         <h2>Caixa Térmica 90L</h2>
         <!-- Valor -->
         <p><b>R$ 585,00</b> no PIX</p>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="detalhes5.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -128,7 +128,7 @@
         <h2>Freezer 300 Litros com Tampa 12/2</h2>
         <!-- Valor -->
         <p><b>R$ 3.505,50</b> no PIX</p>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="detalhes6.html" class="botao">Mais Informações</a>
       </article>
 
       </article>
