--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <img src="./fotoproduto/produto1.jpg" alt="Carro 1">
       <h2>Frigobar 80 Litros 12/24v</h2>
       <p>Preço:R$3.448,50</p>
-      <a href="detalhes1.html" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+      <a href="Detalhes1.html" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
     <article class="art-home">
       <img src="./fotoproduto/produto2.jpg" alt="Carro 2">
