--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
  var images = [
       "./template/template1.jpg",
       "./template/template2.jpg",
+      "./template/template4.jpg",
       "./template/template3.jpg",
       // Adicione mais URLs de imagens conforme necessário
     ];
