--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <ul class="menu">
       <li class="logo"><img class="logopag " src="./logo/logo.png" href="index.html" alt="Logo da Sua Empresa"><a href="index.html"></a></li>
       <li class="item"><a href="index.html">Home</a></li>
-      <li class="item"><a href="catalogo.html">Catalago</a></li>
+      <li class="item"><a href="catalogo.html">Catalogo</a></li>
       <li class="item"><a href="orcamento.html">Orçamento</a></li>
       <li class="item button secondary"><a href="login.html">Login</a></li>
       <li class="toggle"><span class="bars"></span></li>
