--- a/orcamento2.html
+++ b/orcamento2.html
@@ -48,7 +48,7 @@
     <ul class="menu">
       <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
       <li class="item"><a href="index.html">Home</a></li>
-      <li class="item"><a href="catalogo2.html">Catalago</a></li>
+      <li class="item"><a href="catalogo2.html">Catálogo</a></li>
       <li class="item"><a href="orcamento.html">Orçamento</a></li>
       <li class="item"><a href="anuncio.html">Minha Conta</a></li>
       <li class="item button secondary"><a href="index.html">Sair</a></li>
